--- a/css/style.css
+++ b/css/style.css
@@ -291,9 +291,6 @@ button {
 }
 
 .header_section nav {
-    position: fixed;
-    top: 0;
-    left: 0;
     padding: 10px 20px;
     width: 100%;
     z-index: 1000;
@@ -348,14 +345,14 @@ a.navbar-brand h3 {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
-    color: #0096c7;
-    border: 1px solid #0096c7;
+    color: #3498db;
+    border: 1px solid #3498db;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #0096c7;
-    border: 1px solid #0096c7;
+    color: #3498db;
+    border: 1px solid #3498db;
 }
 
 .navbar-brand {
@@ -378,12 +375,17 @@ a.navbar-brand h3 {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link:hover {
-    color: #0096c7;
+    color: #3498db;
     font-weight: 700;
 }
 
 .nav-item.dropdown:hover .dropdown-menu {
     display: block;
+}
+
+.dropdown-item:hover {
+    background-color: #3498db;
+    color: #fff;
 }
 /* header section end */
 
@@ -443,7 +445,7 @@ a.navbar-brand h3 {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     color: #ffffff;
-    background-color: #0096c7;
+    background-color: #3498db;
     text-transform: capitalize;
     border: none;
     border-radius: 5px;
@@ -692,20 +694,20 @@ p.chunks_text {
 }
 
 .service_box:hover .corporate_text {
-    color: #0096c7;
+    color: #3498db;
 }
 
 .service_box:hover .readmore_button a {
-    background-color: #0096c7;
+    background-color: #3498db;
     color: #fff;
 }
 
 .service_box.active .corporate_text {
-    color: #0096c7;
+    color: #3498db;
 }
 
 .service_box.active .readmore_button a {
-    background-color: #0096c7;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -735,26 +737,27 @@ p.chunks_text {
 #main_slider .carousel-control-prev:focus,
 #main_slider .carousel-control-prev:hover {
     color: #030453;
-    background-color: #0096c7;
+    background-color: #3498db;
 }
 
-/* services section end */
-
-/* training section start */
-
 .training_section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     float: left;
     padding-bottom: 100px;
+    padding-top: 0;
 }
 
 .training_taital {
     width: 100%;
     float: left;
     font-size: 40px;
-    color: #030453;
     text-align: center;
     font-weight: bold;
+    margin: 40px 0 0;
     text-transform: uppercase;
     padding-bottom: 0px;
 }
@@ -765,15 +768,27 @@ p.chunks_text {
     padding: 20px 0px 0px 0px;
 }
 
+.training_section_2 .row {
+    justify-content: center;
+}
+
 .training_box {
     width: 100%;
     float: left;
     background-color: #ffffff;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    height: 20vh;
+    height: 250px;
     padding: 30px 10px;
     box-shadow: 0px -3px 15px 0px;
+}
+
+.training_box .read_bt a {
+    background-color: #3498db;
+}
+
+.training_box p {
+    height: 50px;
 }
 
 /* Zoom In #1 */
@@ -852,17 +867,35 @@ figure:hover+span {
 
 .read_bt a:hover {
     color: #030453;
-    background-color: #0096c7;
+    background-color: #3498db;
 }
 
 .read_bt.active a {
     color: #030453;
-    background-color: #0096c7;
+    background-color: #3498db;
 }
 
 /* training section end */
 
-/* Training Title */
+/* Registraition Page */
+
+.training_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.trainingLogo {
+    max-width: 100%;
+    width: 300px;
+    transition: transform 0.3s ease;
+}
+
+.trainingLogo:hover {
+    transform: scale(1.05);
+}
+
 .training-title {
     width: 100%;
     font-size: 36px;
@@ -873,7 +906,6 @@ figure:hover+span {
     padding-bottom: 20px;
 }
 
-/* Intro Paragraph */
 .training-intro {
     width: 100%;
     color: #030453;
@@ -882,7 +914,6 @@ figure:hover+span {
     padding: 20px 0;
 }
 
-/* Class Details */
 .class-details-title {
     font-size: 28px;
     color: #030453;
@@ -997,7 +1028,7 @@ figure:hover+span {
 }
 
 .submit-button:hover {
-    background-color: #0096c7;
+    background-color: #3498db;
     color: #030453;
 }
 
@@ -1062,7 +1093,7 @@ figure:hover+span {
 
 .about_section {
     width: 100%;
-    background: linear-gradient(#023e8a 60%, #0096c7 90%);
+    background: linear-gradient(#023e8a 60%, #3498db 90%);
     padding: 40px 0; /* Adjusted padding for consistent spacing */
     min-height: 600px; /* Ensures it has a minimum height but can expand */
     display: flex;
@@ -1158,17 +1189,26 @@ details ul li {
 
 summary:hover,
 summary:focus {
-    background-color: #0096c7;
+    background-color: #3498db;
     border: none;
     border-radius: 5px;
 }
 
 .practice_areas_section {
+    background-image: url("/images/Nashville+Public+Square+Park.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
     margin: 0 auto;
-    width: 75%;
+    width: 100%;
     padding-bottom: 100px;
     padding-top: 80px;
-    background-color: #ffffff8a;
+}
+
+.practice_areas_section .row {
+    background-color: #e9ecef8d;
+    border-radius: 4px;
+    padding: 20px;
 }
 
 .practice_areas_title {
@@ -1192,18 +1232,14 @@ summary:focus {
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 30px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s;
 }
 
 .practice_area_card:hover {
     transform: scale(1.02);
-    background-color: #030453;
-    color: #fff;
-}
-
-.practice_area_card:hover > .practice_area_card_title {
-    color: #fff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .practice_area_card_title {
@@ -1226,9 +1262,6 @@ summary:focus {
 .practice_area_button:hover {
     background-color: #030453;
 }
-
-
-/* Practice Area Section End */
 
 .enim_text {
     width: 100%;
@@ -1267,12 +1300,116 @@ summary:focus {
     background-color: #FFCE04
 }
 
+/* Base Container Styling */
+.mediation-content {
+    font-family: Arial, sans-serif;
+    color: #333;
+    line-height: 1.6;
+}
+
+.mediation-content h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #2c3e50;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.mediation-content p, .mediation-content li {
+    font-size: 1rem;
+    color: #555;
+    margin-bottom: 1rem;
+}
+
+.mediation-content strong {
+    color: #2c3e50;
+}
+
+.mediation-content ul, .mediation-content ol {
+    margin-left: 1.5rem;
+    padding-left: 1rem;
+}
+
+.mediation-content h3 {
+    font-size: 1.5rem;
+    color: #34495e;
+    font-weight: 600;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+/* List Styling */
+.mediation-content ul li {
+    margin-bottom: 0.75rem;
+    padding-left: 1rem;
+    position: relative;
+}
+
+.mediation-content ul li::before {
+    content: "•";
+    color: #3498db;
+    font-weight: bold;
+    position: absolute;
+    left: 0;
+}
+
+.mediation-content ol {
+    counter-reset: list-counter;
+}
+
+.mediation-content ol li {
+    counter-increment: list-counter;
+    padding-left: 1.5rem;
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.mediation-content ol li::before {
+    content: counter(list-counter) ".";
+    color: #3498db;
+    font-weight: bold;
+    position: absolute;
+    left: 0;
+}
+
+/* Contact Section */
+.mediation-content ul.contact-info {
+    list-style: none;
+    padding: 0;
+}
+
+.mediation-content ul.contact-info li {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.mediation-content a {
+    color: #3498db;
+    text-decoration: none;
+}
+
+.mediation-content a:hover {
+    text-decoration: underline;
+}
+
 /* contact section start */
 
 .contact_section {
     width: 100%;
     float: left;
-    padding-bottom: 90px;
+    padding-bottom: 120px;
+    background-color: #f8f9fa;
+    margin-top: -40px;
+}
+
+.contact_section .breadCrumb {
+    margin-top: -140px;
+    padding: 10px 20px;
+    background-color: #030453e6;
+    color: #f8f9fa;
+    text-decoration: underline 1px;
+    text-underline-offset: 10px;
+    width: fit-content;
 }
 
 .contact_taital {
@@ -1283,7 +1420,7 @@ summary:focus {
     font-weight: bold;
     text-transform: uppercase;
     text-align: center;
-    padding-bottom: 0px;
+    padding: 20px;
 }
 
 .contact_section_2 {
@@ -1337,12 +1474,11 @@ textarea#comment::placeholder {
     text-align: center;
 }
 
-.send_bt a {
-    width: 100%;
+.send_bt {
     text-align: center;
     font-size: 18px;
     color: #fff;
-    background-color: #0096c7;
+    background-color: #3498db;
     padding: 10px;
     text-transform: uppercase;
     margin-top: 30px;
@@ -1356,11 +1492,20 @@ textarea#comment::placeholder {
     background-color: #030453;
 }
 
+.contact-form {
+    background: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-/* contact section end */
+.contact-info {
+    background: #e9ecef;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
 
-
-/* footer section start */
 
 .footer_section {
     width: 100%;
@@ -1407,7 +1552,7 @@ textarea#comment::placeholder {
 }
 
 .social_icon li a:hover {
-    color: #0096c7;
+    color: #3498db;
 }
 
 .location_text {
@@ -1432,7 +1577,7 @@ textarea#comment::placeholder {
     font-size: 20px;
     color: #030453;
     margin: 0px 30px;
-    background-color: #0096c7;
+    background-color: #3498db;
     padding: 12px 0px;
     border-radius: 100%;
     width: 60px;
@@ -1465,33 +1610,30 @@ textarea#comment::placeholder {
 }
 
 .copyright_text a:hover {
-    color: #0096c7;
+    color: #3498db;
 }
-
-
-/* copyright section end */
 
 .margin_top90 {
     margin-top: 90px;
 }
 
 /* Animations */
-/* General Slide-Up Animation for scroll-triggered elements */
+
 @keyframes slideUpScroll {
     0% {
         opacity: 0;
-        transform: translateY(50px); /* Start slightly below */
+        transform: translateY(50px);
     }
     100% {
         opacity: 1;
-        transform: translateY(0); /* End at the normal position */
+        transform: translateY(0);
     }
 }
 
 .scroll-reveal {
     opacity: 0;
     visibility: hidden;
-    transform: translateY(50px); /* Positioned below */
+    transform: translateY(50px);
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
 }
 
@@ -1531,4 +1673,11 @@ textarea#comment::placeholder {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+#google_translate_element select {
+    background-color: #f0f0f0;
+    color: #333;
+    border: none;
+    padding: 5px;
 }
