--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/*--------------------------------------------------------------------- File Name: style.css ---------------------------------------------------------------------*/
-
-
-/*--------------------------------------------------------------------- import Files ---------------------------------------------------------------------*/
-
 @import url(animate.min.css);
 @import url(normalize.css);
 @import url(icomoon.css);
@@ -15,7 +10,6 @@
 @import url(jquery-ui.css);
 @import url(nice-select.css);
 @import url('https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
 *, *:before, *:after {
     box-sizing: border-box !important;
@@ -37,7 +31,7 @@ body {
 
 /* Parallax Background Section */
 .parallax-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/nashville.jpg') no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/courthouse.jpg') no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
     height: 85vh;
@@ -48,58 +42,6 @@ body {
     font-family: 'Baskervville SC', 'Poppins', sans-serif;
     margin: auto;
 }
-
-/* From Uiverse.io by bociKond */ 
-#preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-.loader {
-    width: 44.8px;
-    height: 44.8px;
-    color: #023e8a;
-    position: relative;
-    background: radial-gradient(11.2px,currentColor 94%,#0000);
-  }
-  
-  .loader:before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: 50%;
-    background: radial-gradient(10.08px at bottom right,#0000 94%,currentColor) top    left,
-            radial-gradient(10.08px at bottom left ,#0000 94%,currentColor) top    right,
-            radial-gradient(10.08px at top    right,#0000 94%,currentColor) bottom left,
-            radial-gradient(10.08px at top    left ,#0000 94%,currentColor) bottom right;
-    background-size: 22.4px 22.4px;
-    background-repeat: no-repeat;
-    animation: loader 1.5s infinite cubic-bezier(0.3,1,0,1);
-  }
-  
-  @keyframes loader {
-    33% {
-      inset: -11.2px;
-      transform: rotate(0deg);
-    }
-  
-    66% {
-      inset: -11.2px;
-      transform: rotate(90deg);
-    }
-  
-    100% {
-      inset: 0;
-      transform: rotate(90deg);
-    }
-  }
 
 a {
     color: #1f1f1f;
@@ -318,8 +260,9 @@ button {
 }*/
 
 a.navbar-brand h1 {
+    margin-top: 10px;
     color: #030453;
-    font-size: 24pt;
+    font-size: 32pt;
     text-align: center;
     border-bottom: 1px solid #030453;
     line-height: .4;
@@ -327,9 +270,26 @@ a.navbar-brand h1 {
 
 a.navbar-brand h3 {
     color: #030453;
-    font-size: 18px;
+    font-size: 18pt;
     text-align: center;
 }
+
+/* Navbar styles when scrolled */
+.header_section nav.scrolled {
+    padding: 0 15px;
+    background-color: rgba(255, 255, 255, .95) !important;
+    box-shadow: 0 2px 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Navbar-brand styles when scrolled */
+.header_section nav.scrolled a.navbar-brand h1 {
+    font-size: 24pt;
+}
+
+.header_section nav.scrolled a.navbar-brand h3 {
+    font-size: 14pt;
+}
+
 
 .navbar-expand-lg .navbar-nav .nav-link {
     padding: 3px 5px;
@@ -356,7 +316,7 @@ a.navbar-brand h3 {
 }
 
 .navbar-brand {
-    margin: 0px;
+    margin: 10px 0 0;
 }
 
 .navbar {
@@ -366,9 +326,8 @@ a.navbar-brand h3 {
 }
 
 .navbar-nav {
-    padding-left: 30%;
     align-items: flex-end;
-    animation: fadeIn 1.5s ease-in-out forwards;
+    animation: fadeIn 1s ease-in-out forwards;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
@@ -792,8 +751,6 @@ p.chunks_text {
     height: 50px;
 }
 
-/* Zoom In #1 */
-
 .hover01 figure img {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -876,10 +833,6 @@ figure:hover+span {
     background-color: #3498db;
 }
 
-/* training section end */
-
-/* Registraition Page */
-
 .training_container {
     display: flex;
     justify-content: center;
@@ -889,7 +842,7 @@ figure:hover+span {
 
 .trainingLogo {
     max-width: 100%;
-    width: 300px;
+    width: 200px;
     transition: transform 0.3s ease;
 }
 
@@ -1092,15 +1045,19 @@ figure:hover+span {
 
 /* about section start */
 
+.about-page .header_section {
+    padding-top: 120px;
+}
+
 .about_section {
     width: 100%;
     background: linear-gradient(#0077b6 60%, #3498db 90%);
-    padding: 40px 0; /* Adjusted padding for consistent spacing */
-    min-height: 600px; /* Ensures it has a minimum height but can expand */
+    padding: 40px 0;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* Centers content vertically */
+    justify-content: center;
 }
 
 .about_text_main {
@@ -1303,85 +1260,58 @@ summary:focus {
 
 /* Base Container Styling */
 .mediation-content {
-    font-family: Arial, sans-serif;
+    font-family: 'Sen', Arial, sans-serif;
     color: #333;
-    line-height: 1.6;
+    line-height: 1.8;
+    padding: 2rem;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 1s ease-in-out forwards;
 }
 
 .mediation-content h2 {
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 2.5rem;
+    font-weight: 800;
     color: #2c3e50;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.mediation-content .subheading {
+    font-size: 1.2rem;
+    color: #3498db;
     text-align: center;
     margin-bottom: 1rem;
 }
 
-.mediation-content p, .mediation-content li {
-    font-size: 1rem;
+.mediation-content p {
+    font-size: 1.1rem;
     color: #555;
-    margin-bottom: 1rem;
-}
-
-.mediation-content strong {
-    color: #2c3e50;
-}
-
-.mediation-content ul, .mediation-content ol {
-    margin-left: 1.5rem;
-    padding-left: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .mediation-content h3 {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: #34495e;
     font-weight: 600;
     margin-top: 2rem;
     margin-bottom: 1rem;
+    border-bottom: 2px solid #3498db;
+    padding-bottom: 0.5rem;
 }
 
-/* List Styling */
-.mediation-content ul li {
-    margin-bottom: 0.75rem;
-    padding-left: 1rem;
-    position: relative;
-}
-
-.mediation-content ul li::before {
-    content: "•";
-    color: #3498db;
-    font-weight: bold;
-    position: absolute;
-    left: 0;
-}
-
+.mediation-content ul,
 .mediation-content ol {
-    counter-reset: list-counter;
+    margin-left: 2rem;
+    padding-left: 1rem;
+    margin-bottom: 1.5rem;
 }
 
+.mediation-content ul li,
 .mediation-content ol li {
-    counter-increment: list-counter;
-    padding-left: 1.5rem;
+    margin-bottom: 0.75rem;
     position: relative;
-    margin-bottom: 1rem;
-}
-
-.mediation-content ol li::before {
-    content: counter(list-counter) ".";
-    color: #3498db;
-    font-weight: bold;
-    position: absolute;
-    left: 0;
-}
-
-/* Contact Section */
-.mediation-content ul.contact-info {
-    list-style: none;
-    padding: 0;
-}
-
-.mediation-content ul.contact-info li {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
 }
 
 .mediation-content a {
@@ -1390,7 +1320,28 @@ summary:focus {
 }
 
 .mediation-content a:hover {
-    text-decoration: underline;
+    text-decoration: underline !important;
+}
+
+.contact-info {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.contact-info .contact-details {
+    list-style: none;
+    padding: 0;
+    margin-top: 1rem;
+}
+
+.contact-info .contact-details li {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+}
+
+.contact-info a {
+    font-weight: bold;
+    color: #3498db;
 }
 
 /* contact section start */
